fix shifting header, and limitless container

--- a/src/scss/filter.scss
+++ b/src/scss/filter.scss
@@ -1,5 +1,5 @@
 .filter {
-  margin: 1rem;
+  margin: 1rem auto;
   border: 1px solid #000;
   position: relative;
   overflow: hidden;
@@ -26,6 +26,9 @@
       }
 
       .details {
+        table {
+          width: 100%;
+        }
         tr * {
           width: 50%;
           text-align: center;
